@@ -216,7 +216,7 @@ enum {
 	WPA_IE_OK, WPA_INVALID_IE, WPA_INVALID_GROUP, WPA_INVALID_PAIRWISE,
 	WPA_INVALID_AKMP, WPA_NOT_ENABLED, WPA_ALLOC_FAIL,
 	WPA_MGMT_FRAME_PROTECTION_VIOLATION, WPA_INVALID_MGMT_GROUP_CIPHER,
-	WPA_INVALID_MDIE
+	WPA_INVALID_MDIE, WPA_INVALID_PROTO
 };
 	
 int wpa_validate_wpa_ie(struct wpa_authenticator *wpa_auth,
