@@ -17,6 +17,8 @@ ChangeLog for hostapd
 	  (IEEE 802.11w)
 	* added new "driver wrapper" for RADIUS-only configuration
 	  (driver=none in hostapd.conf; CONFIG_DRIVER_NONE=y in .config)
+	* fixed WPA/RSN IE validation to verify that the proto (WPA vs. WPA2)
+	  is enabled in configuration
 
 2008-08-10 - v0.6.4
 	* added peer identity into EAP-FAST PAC-Opaque and skip Phase 2
